Fix lack of horizontal scrolling. Fixes #95

--- a/src/react-sortable-tree.scss
+++ b/src/react-sortable-tree.scss
@@ -9,6 +9,7 @@
  * Extra class applied to VirtualScroll through className prop
  */
 .virtualScrollOverride {
+    overflow: auto !important;
     * {
         box-sizing: border-box;
     }
